--- a/base/build.gradle
+++ b/base/build.gradle
@@ -30,5 +30,9 @@ android {
 
 dependencies {
     api deps.appCompat
+    api 'com.android.support:appcompat-v7:26.1.0'
+    api 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation deps.kotlin
+    feature project(":splash")
+    api "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
