splash feature, first application run

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,4 @@
 apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
 
 android {
     def config = rootProject.extensions.getByName("ext")
@@ -23,4 +21,5 @@ android {
 }
 
 dependencies {
+    implementation project(':splash')
 }
