--- a/base/build.gradle
+++ b/base/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.feature'
+apply plugin: 'kotlin-android'
+apply plugin: "kotlin-kapt"
+apply plugin: 'kotlin-android-extensions'
 
 android {
     baseFeature true
@@ -21,18 +24,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
 }
 
 dependencies {
     api deps.appCompat
-    api 'com.android.support:appcompat-v7:26.1.0'
-    api 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation deps.kotlin
     feature project(":splash")
-    api "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
