--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,11 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 
 android {
     def config = rootProject.extensions.getByName("ext")
 
     compileSdkVersion config.compileSdkVersion
+
     defaultConfig {
         applicationId "com.ihorvitruk.telegramclient"
         minSdkVersion config.minSdkVersion
