--- a/splash/src/main/AndroidManifest.xml
+++ b/splash/src/main/AndroidManifest.xml
@@ -2,7 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ihorvitruk.telegramclient.splash">
 
-    <application>
+    <application
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:roundIcon="@mipmap/ic_launcher_round"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
         <activity android:name=".SplashActivity">
             <intent-filter android:order="1">
                 <action android:name="android.intent.action.VIEW" />
