--- a/splash/build.gradle
+++ b/splash/build.gradle
@@ -1,5 +1,6 @@
 apply plugin: 'com.android.feature'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
 
 android {
     def config = rootProject.extensions.getByName("ext")
@@ -9,6 +10,10 @@ android {
         targetSdkVersion config.targetSdkVersion
         versionCode config.versionCode
         versionName config.versionName
+    }
+
+    dataBinding {
+        enabled = true
     }
 }
 
