--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,15 +3,13 @@ apply plugin: 'kotlin-android'
 
 android {
     def config = rootProject.extensions.getByName("ext")
-
-    compileSdkVersion config.compileSdkVersion
-
+    compileSdkVersion config.versions.compileSdk
     defaultConfig {
         applicationId "com.ihorvitruk.telegramclient"
-        minSdkVersion config.minSdkVersion
-        targetSdkVersion config.targetSdkVersion
-        versionCode config.versionCode
-        versionName config.versionName
+        minSdkVersion config.versions.minSdk
+        targetSdkVersion config.versions.targetSdk
+        versionCode config.versions.versionCode
+        versionName config.versions.versionName
     }
 
     buildTypes {
