--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,13 @@
-apply from: 'config/dependencies.gradle'
 
 buildscript {
-    ext.kotlin_version = '1.2.0'
+    apply from: 'config/dependencies.gradle'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0-alpha06'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath deps.gradle.plugin
+        classpath deps.kotlin.plugin
     }
 }
 
