--- a/splash/build.gradle
+++ b/splash/build.gradle
@@ -4,12 +4,12 @@ apply plugin: 'kotlin-kapt'
 
 android {
     def config = rootProject.extensions.getByName("ext")
-    compileSdkVersion config.compileSdkVersion
+    compileSdkVersion config.versions.compileSdk
     defaultConfig {
-        minSdkVersion config.minSdkVersion
-        targetSdkVersion config.targetSdkVersion
-        versionCode config.versionCode
-        versionName config.versionName
+        minSdkVersion config.versions.minSdk
+        targetSdkVersion config.versions.targetSdk
+        versionCode config.versions.versionCode
+        versionName config.versions.versionName
     }
 
     dataBinding {
@@ -19,4 +19,5 @@ android {
 
 dependencies {
     implementation project(':base')
+    kapt deps.databinding.compiler
 }
