--- a/presentation/splash/build.gradle
+++ b/presentation/splash/build.gradle
@@ -11,8 +11,6 @@ android {
         versionCode config.versions.versionCode
         versionName config.versions.versionName
     }
-    
-    baseFeature true
 
     dataBinding {
         enabled = true
@@ -20,15 +18,6 @@ android {
 }
 
 dependencies {
-    application project(":app")
-    feature project(":splash")
-
-    api deps.support.appCompat
-    api deps.kotlin.stdlib
-
-    api deps.lifecycle.runtime
-    api deps.lifecycle.extensions
-    kapt deps.lifecycle.compiler
-
+    implementation project(':presentation:base')
     kapt deps.databinding.compiler
 }
