--- a/presentation/base/src/main/AndroidManifest.xml
+++ b/presentation/base/src/main/AndroidManifest.xml
@@ -1,2 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.ihorvitruk.telegramclient.base" />
+<manifest package="com.ihorvitruk.telegramclient.presentation.base" />
