--- a/config/dependencies.gradle
+++ b/config/dependencies.gradle
@@ -40,6 +40,7 @@ deps.kotlin = kotlin
 
 def support = [:]
 support.appCompat = "com.android.support:appcompat-v7:$versions.support"
+support.annotations = "com.android.support:support-annotations:$versions.support"
 deps.support = support
 
 def dagger = [:]
