--- a/libtd/build.gradle
+++ b/libtd/build.gradle
@@ -21,8 +21,8 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.3"
+    def config = rootProject.extensions.getByName("ext")
+    compileSdkVersion config.versions.compileSdk
 
     sourceSets.main {
         jniLibs.srcDir 'src/main/libs'
@@ -30,8 +30,8 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 10
-        targetSdkVersion 21
+        minSdkVersion config.versions.minSdk
+        targetSdkVersion config.versions.targetSdk
         versionCode 1
         versionName "1.0"
     }
@@ -49,5 +49,5 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-annotations:25.0.0'
+    implementation deps.support.annotations
 }
