--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,13 @@ dependencies {
     implementation project(':presentation:base')
     implementation project(':presentation:splash')
     implementation project(":data")
+    implementation project(":domain")
     kapt deps.databinding.compiler
 }
+
+kotlin {
+    experimental {
+        coroutines 'enable'
+    }
+}
+
