--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,7 @@
-include ':app', ':presentation:base', ':presentation:splash', ':instantapp', ':data', ":libtd"
+include ':app',
+        ':presentation:base',
+        ':presentation:splash',
+        ':instantapp',
+        ':data',
+        ':domain',
+        ":libtd"
