--- a/presentation/login/build.gradle
+++ b/presentation/login/build.gradle
@@ -18,6 +18,6 @@ android {
 }
 
 dependencies {
-    implementation project(':presentation:base')
+    api project(':presentation:base')
     kapt deps.databinding.compiler
 }
