--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.ihorvitruk.telegramclient.app.activity.SingleActivity">
+        <activity android:name="com.ihorvitruk.telegramclient.app.activity.AppActivity">
             <intent-filter android:order="1">
                 <action android:name="android.intent.action.VIEW" />
 
